update resource
