# proto/api/v1/resource_grpc.pb.go
@@ -21,6 +21,7 @@ const _ = grpc.SupportPackageIsVersion7
 const (
 	ResourceService_Read_FullMethodName   = "/v1.ResourceService/Read"
 	ResourceService_Create_FullMethodName = "/v1.ResourceService/Create"
+	ResourceService_Update_FullMethodName = "/v1.ResourceService/Update"
 )
 
 // ResourceServiceClient is the client API for ResourceService service.
@@ -29,6 +30,7 @@ const (
 type ResourceServiceClient interface {
 	Read(ctx context.Context, in *ResourceReadRequest, opts ...grpc.CallOption) (*Resource, error)
 	Create(ctx context.Context, in *ResourceCreateRequest, opts ...grpc.CallOption) (*Resource, error)
+	Update(ctx context.Context, in *ResourceUpdateRequest, opts ...grpc.CallOption) (*Resource, error)
 }
 
 type resourceServiceClient struct {
@@ -57,12 +59,22 @@ func (c *resourceServiceClient) Create(ctx context.Context, in *ResourceCreateRe
 	return out, nil
 }
 
+func (c *resourceServiceClient) Update(ctx context.Context, in *ResourceUpdateRequest, opts ...grpc.CallOption) (*Resource, error) {
+	out := new(Resource)
+	err := c.cc.Invoke(ctx, ResourceService_Update_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ResourceServiceServer is the server API for ResourceService service.
 // All implementations must embed UnimplementedResourceServiceServer
 // for forward compatibility
 type ResourceServiceServer interface {
 	Read(context.Context, *ResourceReadRequest) (*Resource, error)
 	Create(context.Context, *ResourceCreateRequest) (*Resource, error)
+	Update(context.Context, *ResourceUpdateRequest) (*Resource, error)
 	mustEmbedUnimplementedResourceServiceServer()
 }
 
@@ -75,6 +87,9 @@ func (UnimplementedResourceServiceServer) Read(context.Context, *ResourceReadReq
 }
 func (UnimplementedResourceServiceServer) Create(context.Context, *ResourceCreateRequest) (*Resource, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Create not implemented")
+}
+func (UnimplementedResourceServiceServer) Update(context.Context, *ResourceUpdateRequest) (*Resource, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Update not implemented")
 }
 func (UnimplementedResourceServiceServer) mustEmbedUnimplementedResourceServiceServer() {}
 
@@ -125,6 +140,24 @@ func _ResourceService_Create_Handler(srv interface{}, ctx context.Context, dec f
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ResourceService_Update_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ResourceUpdateRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ResourceServiceServer).Update(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ResourceService_Update_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ResourceServiceServer).Update(ctx, req.(*ResourceUpdateRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // ResourceService_ServiceDesc is the grpc.ServiceDesc for ResourceService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -139,6 +172,10 @@ var ResourceService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Create",
 			Handler:    _ResourceService_Create_Handler,
+		},
+		{
+			MethodName: "Update",
+			Handler:    _ResourceService_Update_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
